# hud-engine

./: .gitattributes  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Coding standard.docx  README.md  TODO.md  Usefull Links.md  hudengine.code-workspace
Sources/Runtime/OSLayer/: .gitignore  CMakeLists.txt
Sources/Runtime/OSLayer/Implementation/OSLayer/Hash/: Crc32.cpp
Sources/Runtime/OSLayer/Implementation/OSLayer/OSLinux/: LinuxDebugger.cpp
Sources/Runtime/OSLayer/Interface/OSLayer/: Assert.h  Atomics.h  CString.h  Char.h  Compilation.h  CompilerDefines.h  Debugger.h  Defines.h  Hash.h  Math.h  Memory.h  Minimal.h  Slice.h  String.h  TagInPlace.h  TagInit.h  Types.h  Uuid.h
Sources/Runtime/OSLayer/Interface/OSLayer/Allocators/: AlignedHeapAllocator.h  Allocation.h  HeapAllocator.h
Sources/Runtime/OSLayer/Interface/OSLayer/Containers/: AlignedBuffer.h  Array.h  Optional.h  Pair.h  SharedPointer.h  Tuple.h  TupleElement.h  TupleSize.h  UniquePointer.h
Sources/Runtime/OSLayer/Interface/OSLayer/Hash/: CityHash.h  Crc32.h
Sources/Runtime/OSLayer/Interface/OSLayer/Iterators/: RandomAccessIterator.h
Sources/Runtime/OSLayer/Interface/OSLayer/OSCommon/: CommonAtomics.h  CommonCString.h  CommonChar.h  CommonMemory.h  CommonTypes.h  CommonUuid.h
Sources/Runtime/OSLayer/Interface/OSLayer/OSLinux/: LinuxAtomics.h  LinuxCString.h  LinuxChar.h  LinuxDebugger.h  LinuxMemory.h  LinuxTypes.h  LinuxUuid.h
Sources/Runtime/OSLayer/Interface/OSLayer/OSWindows/: WindowsAPI.h  WindowsAtomics.h  WindowsAtomicsIntel.h  WindowsCString.h  WindowsChar.h  WindowsDebugger.h  WindowsMemory.h  WindowsTypes.h  WindowsUuid.h
Sources/Runtime/OSLayer/Interface/OSLayer/Templates/: BitCast.h  Declval.h  DefaultDeleter.h  Equal.h  Forward.h  Greater.h  GreaterEqual.h  IntegerSequence.h  Less.h  LessEqual.h  LexicographicalCompare.h  Max.h  Min.h  Move.h  SelectDeleterPointerType.h  Swap.h
Sources/Runtime/OSLayer/Interface/OSLayer/Traits/: AddCV.h  AddConst.h  AddLValueReference.h  AddPointer.h  AddRValueReference.h  AddVolatile.h  And.h  ApplyCV.h  CommonType.h  Conditional.h  Decay.h  EnableIf.h  Extent.h  HasUniqueObjectRepresentations.h  IntegralConstant.h  IsAnyTypeIn.h  IsArithmetic.h  IsArray.h  IsBool.h  (+96 more)
Test/Framework/: CMakeLists.txt
Test/Framework/Catch2/: CMakeLists.txt  test_adapter.runsettings
Test/Framework/Catch2/Catch2/: catch.hpp
Test/Framework/Doctest/: CMakeLists.txt
Test/Framework/GoogleTest/: CMakeLists.txt
Test/Runtime/OSLayer/: AlignedBuffer.cpp  AlignedHeapAllocator.cpp  Allocation.cpp  Atomics.cpp  CMakeLists.txt  CString.cpp  Char.cpp  Compilation.cpp  Hash.cpp  HeapAllocator.cpp  Main.cpp  Precompiled.h  RandomAccessIterator.cpp  Slice.cpp  Types.cpp  UUID.cpp
Test/Runtime/OSLayer/Array/: Add.cpp  Add_no_construct.cpp  Add_to_ref.cpp  Allocators.h  Assignment.cpp  Clear.cpp  Comparison.cpp  Constructors.cpp  Destructor.cpp  Emplace_at.cpp  Emplace_at_to_ref.cpp  Emplace_back.cpp  Emplace_back_to_ref.cpp  Iteration.cpp  Misc.cpp  Remove_at.cpp  Reserve.cpp  Resize.cpp  Search.cpp  Shrink_to_fit.cpp  Swap.cpp
Test/Runtime/OSLayer/Memory/: Alignment.cpp  Allocation.cpp  Compare.cpp  Construct.cpp  CopyAssign.cpp  CopyConstruct.cpp  Copy_Move.cpp  DefaultConstruct.cpp  Destroy.cpp  FastMoveOrCopyConstructArrayThenDestroy.cpp  MoveOrCopyAssign.cpp  MoveOrCopyConstructThenDestroy.cpp  MoveOrCopyConstructThenDestroyBackward.cpp  Reverse.cpp  Rotate.cpp  SetZero.cpp
Test/Runtime/OSLayer/Misc/: DefaultConstructibleType.h  ForEachType.h  ForEachValue.h  LeakGuard.h  NonBitwiseCopyAssignableType.h  NonBitwiseCopyConstructibleType.h  NonBitwiseMoveAssignableType.h  NonBitwiseMoveConstructibleType.h  NonBitwiseType.h  NonDefaultConstructibleType.h  SetBoolToTrueWhenDestroyed.h  TestNamespace.h
Test/Runtime/OSLayer/Optional/: Assignment.cpp  Comparison.cpp  Constructors.cpp  Emplace.cpp  Misc.cpp  Swap.cpp
Test/Runtime/OSLayer/Pair/: Assignments.cpp  Comparison.cpp  Constructors.cpp  Misc.cpp  Swap.cpp
Test/Runtime/OSLayer/SharedPointer/multi thread/: Assignements.cpp  Comparison.cpp  Constructors.cpp  Destructor.cpp  Misc.cpp  Swap.cpp
Test/Runtime/OSLayer/SharedPointer/multi thread array/: Assignements.cpp  Comparison.cpp  Constructors.cpp  Destructor.cpp  Misc.cpp  Swap.cpp
Test/Runtime/OSLayer/SharedPointer/single thread/: Assignements.cpp  Comparison.cpp  Constructors.cpp  Destructor.cpp  Misc.cpp  Swap.cpp
Test/Runtime/OSLayer/SharedPointer/single thread array/: Assignements.cpp  Comparison.cpp  Constructors.cpp  Destructor.cpp  Misc.cpp  Swap.cpp
Test/Runtime/OSLayer/Templates/: BitCast.cpp  Declval.cpp  DefaultDeleter.cpp  Equal.cpp  Forward.cpp  Greater.cpp  GreaterEqual.cpp  IntegerSequence.cpp  Less.cpp  LessEqual.cpp  LexicographicalCompare.cpp  Max.cpp  Min.cpp  Move.cpp  SelectDeleterPointerType.cpp  Swap.cpp
Test/Runtime/OSLayer/Traits/: AddCV.cpp  AddConst.cpp  AddLValueReference.cpp  AddPointer.cpp  AddRValueReference.cpp  AddVolatile.cpp  And.cpp  ApplyCV.cpp  CommonType.cpp  Conditional.cpp  Decay.cpp  EnableIf.cpp  Extent.cpp  HasUniqueObjectRepresentations.cpp  IntegralConstant.cpp  IsAnyTypeIn.cpp  IsArithmetic.cpp  IsArray.cpp  IsAssignable.cpp  IsBaseOf.cpp  IsBitwiseComparable.cpp  IsBitwiseConvertible.cpp  IsBitwiseCopyAssignable.cpp  IsBitwiseCopyConstructible.cpp  IsBitwiseMoveAssignable.cpp  IsBitwiseMoveConstructible.cpp  IsBool.cpp  IsBoundedArray.cpp  IsClass.cpp  IsComparableWithEqual.cpp  IsComparableWithGreater.cpp  IsComparableWithGreaterEqual.cpp  IsComparableWithLess.cpp  IsComparableWithLessEqual.cpp  IsComparableWithNotEqual.cpp  IsConst.cpp  IsConstantEvaluated.cpp  IsConstructible.cpp  IsConvertible.cpp  IsCopyAssignable.cpp  (+74 more)
Test/Runtime/OSLayer/Tuple/: Assignments.cpp  Comparison.cpp  Constructors.cpp  Misc.cpp  Swap.cpp  TupleElement.cpp  TupleSize.cpp
Test/Runtime/OSLayer/UniquePointer/array/: Assignments.cpp  Comparison.cpp  Constructors.cpp  Destructor.cpp  Misc.cpp  Swap.cpp
Test/Runtime/OSLayer/UniquePointer/single/: Assignments.cpp  Comparison.cpp  Constructors.cpp  Destructor.cpp  Misc.cpp  Swap.cpp
(+6 files in other folders)
